# checksum_dict

./: .buildinfo  .gitignore  3fed2dd976ff832859ee__mypyc.cp310-win_amd64.pyd  3fed2dd976ff832859ee__mypyc.cp311-win_amd64.pyd  3fed2dd976ff832859ee__mypyc.cp312-win_amd64.pyd  3fed2dd976ff832859ee__mypyc.cp38-win_amd64.pyd  3fed2dd976ff832859ee__mypyc.cp39-win_amd64.pyd  AGENTS.md  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test_checksum.py
_modules/: index.html
benchmarks/: README.md  data.py  pytest.ini  test_default_benchmarks.py  test_dict_benchmarks.py  test_singleton_benchmarks.py  test_utils_benchmarks.py
checksum_dict/: __init__.py  _checksum.pyx  _key.py  _typing.py  _utils.cp310-win_amd64.pyd  _utils.cp311-win_amd64.pyd  _utils.cp312-win_amd64.pyd  _utils.cp38-win_amd64.pyd  _utils.cp39-win_amd64.pyd  _utils.py  _utils__mypyc.cp310-win_amd64.pyd  _utils__mypyc.cp311-win_amd64.pyd  _utils__mypyc.cp312-win_amd64.pyd  _utils__mypyc.cp38-win_amd64.pyd  _utils__mypyc.cp39-win_amd64.pyd  base.cp310-win_amd64.pyd  base.cp311-win_amd64.pyd  base.cp312-win_amd64.pyd  base.cp38-win_amd64.pyd  base.cp39-win_amd64.pyd  base.py  base__mypyc.cp310-win_amd64.pyd  base__mypyc.cp311-win_amd64.pyd  base__mypyc.cp312-win_amd64.pyd  base__mypyc.cp38-win_amd64.pyd  base__mypyc.cp39-win_amd64.pyd  checksum.py  default.cp310-win_amd64.pyd  default.cp311-win_amd64.pyd  default.cp312-win_amd64.pyd  default.cp38-win_amd64.pyd  default.cp39-win_amd64.pyd  default.py  (+7 more)
(+21 files in other folders)
