[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "mypy[mypyc]>=1.18.2,<1.19.0", "cchecksum>=0.3.1,<1"]

[tool.black]
line-length = 100

[tool.mypy]
exclude = [".eggs/",".github/",".hypothesis/",".mypy_cache/",".pytest_cache/","build/","cache/","checksum_dict.egg-info/","dist/","env/"]
