[build-system]
requires = [
  "setuptools",
  "wheel",
  "setuptools_scm",
  "mypy[mypyc]==1.14.1; python_version == '3.8'",
  "mypy[mypyc]==1.19.1; python_version != '3.8'",
  "cchecksum>=0.3.1,<1"
]

[tool.black]
line-length = 100

[tool.mypy]
exclude = [".eggs/",".github/",".hypothesis/",".mypy_cache/",".pytest_cache/","build/","cache/","checksum_dict.egg-info/","dist/","env/"]
