[build-system]
requires = [
  "setuptools",
  "wheel",
  "setuptools_scm",
  "mypy[mypyc]==1.19.1",
  "cchecksum>=0.3.8.dev0,<1"
]

[tool.black]
line-length = 100

[tool.mypy]
exclude = [".eggs/",".github/",".hypothesis/",".mypy_cache/",".pytest_cache/","build/","cache/","checksum_dict.egg-info/","dist/","env/"]
files = ["checksum_dict"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
install_types = true
non_interactive = true
